--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -71,7 +71,7 @@ touch pages/_slug/index.vue
 That's more or less it! You create a directory with an `_` prefix and then Nuxt automagically
 maps the routes for you.
 
-e.g. - `/i-am-a-slug` can be accessed in a computed property in `index.vue` as 
+e.g. - `/i-am-a-slug` can be accessed in `index.vue` as the `slug` property of `params`.
 ```
 this.$route.params.slug
 ```
@@ -80,29 +80,44 @@ this.$route.params.slug
 Nuxt provides great support for Vuex, but there's a slight difference in how you need to define your state.
 
 ```
-export const state = () => ({
-  list: [
-    {
-      id: 1,
-      slug: 'hello-nuxt-markdown',
-      title: 'Welcome to my new site using Nuxt + MarkDown',
-      created_at: '10/22/2016'
+import Vuex from 'vuex'
+
+const makeStore = () => {
+  return new Vuex.Store({
+    state: {
+      posts: [],
+      post: {}
     }
-  ]
-})
+    ...
+  })
+}
+export default makeStore
 ```
 
-Notice how we are returning a function, it's a minor change but is needed for Vuex with Nuxt. In this above example, I have defined a basic array of JSON data to represent each post.  
+Notice how we are exporting a function which creates a `Vuex.Store`? It's a minor change but is needed for Vuex with Nuxt. In this above example, I have defined a basic array of JSON data to represent each post.  
 
 #### Loading the Post from Vuex
 
-To fetch the data from the store, I use a computed property which uses the `$route` object to get the `slug` value. 
-Nuxt creates the routes for you so there's no work for you to do.
+To pull post data from the store, I use the special Nuxt `fetch` method. 
+
+> The fetch method is used to fill the store before rendering the page, it's like the data method except it doesn't set the component data.
+[https://nuxtjs.org/api/pages-fetch/#the-fetch-method]
+
+Nuxt is doing a lot of work for us here. We have access to the store, params and don't forget that the `_slug` directory will ensure
+we have the `slug` value in the params. 
+
+Thanks to @twitter.com/DavidRoyer for sharing his repo he's built for his Nuxt site, helped me figure out that the `fetch` method is what I needed.
+
+In this particular code snippet below, I am running two dispatches to load up the data we need. If the site was running off
+a traditional RESTful API I would probably just have 1 call here, but I'm currently storing it all locally and setting the posts
+with `getPosts`. I intend on making
+this better over time.
 
 ```
-let post = this.$store.state.posts.list.find((post) => {
-  return (post.slug === this.$route.params.slug)
-})
+fetch ({store, params}) {
+  store.dispatch('getPosts')
+  store.dispatch('getPostWithSlug', params.slug)
+}
 ```
 
 #### Mark Down Loading + Parsing
@@ -122,6 +137,9 @@ you can output easily using the `v-html` directive.
 
 `vue-markdown` is a file loader that you'll need to include the markdown file dynamically.
 
+After releasing this, I realized that nuxt has support for Markdown as a module. [https://github.com/nuxt-community/modules/tree/master/modules/markdownit].
+In the future I will probably look at using this instead.
+
 ### Code Highlighting
 
 Something that is really important for any developer blogging is having `<pre>` code with some syntax highlighting.
@@ -132,9 +150,25 @@ npm install highlight.js --save
 
 ```
 
-The trickier part is figuring out how to integrate this into the project.
+To hook this in to the markdown content, you need to add this before you parse the content.
 
-It's probably best if I put this all together in one code sample below. 
+```
+Marked.setOptions({
+  highlight: function (code) {
+    return HighlightJs.highlightAuto(code).value
+  }
+})
+```
+### Commenting 
+
+Lastly, most personal sites need commenting so I decided to give the `vue-disqus` module a shot.
+
+```
+npm install vue-disqus --save
+```
+
+Configuring the module is pretty straightforward except for 1 issue I had with it
+not re-rendering when the route/url changes. It's probably best if I put this all together in one code sample below. 
 
 
 `_slug/index.vue`
@@ -142,40 +176,78 @@ It's probably best if I put this all together in one code sample below.
 <template>
   <div class="post">
     <div v-html="postContent"></div>
+    <disqus ref="disqus" v-bind:shortname="disqusShortname" :identifier="disqusId"></disqus>
   </div>
 </template>
 <script type="text/babel">
-  import marked from 'marked'
+  import Marked from 'marked'
+  import Disqus from 'vue-disqus/VueDisqus.vue'
+  import HighlightJs from 'highlight.js'
+
   export default {
     layout: 'slug',
+    components: {
+      Disqus
+    },
+    head () {
+      let post = this.post
+      return {
+        title: 'Andre Liem',
+        meta: [
+          {
+            hid: post.meta.id,
+            name: post.meta.name,
+            content: post.meta.content
+          }
+        ]
+      }
+    },
+    fetch ({store, params}) {
+      store.dispatch('getPosts')
+      store.dispatch('getPostWithSlug', params.slug)
+    },
     computed: {
+      post () {
+        return this.$store.state.post
+      },
       postContent () {
-        let post = this.$store.state.posts.list.find((post) => {
-          return (post.slug === this.$route.params.slug)
-        })
-        if (!post) {
-          return
-        }
-        marked.setOptions({
+        let post = this.$store.state.post
+        Marked.setOptions({
           highlight: function (code) {
-            return require('highlight.js').highlightAuto(code).value
+            return HighlightJs.highlightAuto(code).value
           }
         })
-        return marked(require('../../content/posts/${post.id}.md'))
+        return Marked(require('../../content/posts/${post.id}.md'))
+      },
+      disqusShortname () {
+        return 'andreliem-1'
+      },
+      disqusId () { // env used to avoid re-use from dev to production
+        return '${process.env.NODE_ENV}-${this.disqusShortname}-${this.post.id}'
+      }
+    },
+    watch: {
+      '$route.params.slug' (curr, old) {
+        // disqus does not properly reload just based off the
+        // disqusId computed property - we need to manually change it
+        // when we know it should update
+        this.$refs.disqus.init()
       }
     }
   }
 </script>
 ```
 
-This file does the following in one `computed` function.
+This file does the following:
 
-1. Find the post given the slug in the URL
-2. Return if it does not exist
-3. Integrate code syntax highlighting with `highlight.js`
-4. Load a local markdown MD file using the `id` of the post as a unique file identifier.
+1. Find the post given the slug in the URL using a `dispatch` call
+2. Integrate code syntax highlighting with `highlight.js`
+3. Load a local markdown MD file using the `id` of the post as a unique file identifier.
+4. Load a unique Disqus commenting form for each post.
 
-That's it! With this single file and some basic CSS integrations (I picked bootstrap) you have a basic blog:
+That's it! With this single file and layout which puts my face at the top you have a basic blog layout.
+
+From here the process of blogging involves these steps:
 
 1. Create new entry in the Vuex state to represent the post.
 2. Create the markdown file and type away.
@@ -193,6 +265,20 @@ This crates a `dist` folder that you can upload to your hosting service. I won't
 as there are some pretty neat solutions for hosting static sites... perhaps in another post. For now, all I'm doing
 is hacking it through a github commit process. I'll look at improving that in the future but for now it serves my 
 needs.
+
+The one thing to keep in mind is that for static sites, you need to define the URls that you wish to have
+available in the `nuxt.config.js` file.
+
+```
+generate: {
+  routes: [
+    '/',
+    '/getting-started-nuxt-markdown',
+    '/my-top-10-favourites-of-being-a-freelancer-software-developer',
+    '/setting-up-php-xdebug-with-laravel-vagrant-and-phpstorm'
+  ]
+},
+```
 
 #### Conclusion 
 
