--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -159,6 +159,10 @@ Marked.setOptions({
   }
 })
 ```
+
+Unfortunately, this does not seem to work 100%. I am still trying to figure out why but highlighting
+is not working all the time. Moving to the  *markdownit* module might solve this problem.
+
 ### Commenting 
 
 Lastly, most personal sites need commenting so I decided to give the `vue-disqus` module a shot.
