--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -35,6 +35,11 @@ Fortunately, doing all of this was pretty easy. The remainder of this post is go
 site. Eventually I will be updating the the repository I setup [https://github.com/andreliem/vuecms] to reflect the new
 direction of basing everythig off of Nuxt.
 
+For now you can clone my actual personal site if you like to try it out. [https://github.com/andreliem/andreliem.ca]. 
+There isn't anything private about my site at the moment so I wanted to share it with developers early on. Just note that
+I might make it private down the road when all my efforts are focused on this repo I setup here: [https://github.com/andreliem/vuecms] 
+
+
 ### Getting Setup
 Getting setup with Nuxt was as painless as getting setup with Vue JS using the CLI.  
 
