--- a/content/posts/1.md
+++ b/content/posts/1.md
@@ -111,7 +111,7 @@ To pull post data from the store, I use the special Nuxt `fetch` method.
 Nuxt is doing a lot of work for us here. We have access to the store, params and don't forget that the `_slug` directory will ensure
 we have the `slug` value in the params. 
 
-Thanks to DavidRoyer\_ for sharing his repo he's built for his Nuxt site, helped me figure out that the `fetch` method is what I needed.
+Thanks to [DavidRoyer_](https://twitter.com/DavidRoyer_) for sharing his repo he's built for his Nuxt site, helped me figure out that the `fetch` method is what I needed.
 
 In this particular code snippet below, I am running two dispatches to load up the data we need. If the site was running off
 a traditional RESTful API I would probably just have 1 call here, but I'm currently storing it all locally and setting the posts
@@ -144,6 +144,8 @@ you can output easily using the `v-html` directive.
 
 After releasing this, I realized that nuxt has support for Markdown as a module. [https://github.com/nuxt-community/modules/tree/master/modules/markdownit].
 In the future I will probably look at using this instead.
+
+*update - I have now moved to using this module and it works much better.
 
 ### Code Highlighting
 
